--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -5,7 +5,10 @@
         <h2>Flight Number: <%= flight.number %> - Airline: <%= flight.airline.name %></h2>
         <ul>
             <% flight.passengers.each do |passenger| %>
-                <li><%= passenger.name %></li>
+                <li>
+                    <%= passenger.name %>
+                    <%= button_to "Remove", flight_flight_passenger_path(flight_id: flight.id, id: passenger.id), method: :delete %>
+                </li>
             <% end %>
         </ul>
     </div>
